--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+dj-database-url==0.3.0
+dj-static==0.0.6
 Django==1.8.4
 django-adminplus==0.3
 django-extensions==1.5.5
+gunicorn==19.3.0
 psycopg2==2.6.1
 six==1.9.0
+static3==0.6.1
 Werkzeug==0.10.4
