--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "colorbrewer": "0.0.2",
     "d3": "^3.5.6",
     "queue-async": "^1.0.7",
+    "topojson": "^1.6.19",
     "underscore": "^1.8.3"
   }
 }
