--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "backbone": "^1.2.1",
     "colorbrewer": "0.0.2",
     "d3": "^3.5.6",
+    "datamaps": "^0.4.0",
     "queue-async": "^1.0.7",
     "topojson": "^1.6.19",
     "underscore": "^1.8.3"
