--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "webpack": "^1.11.0"
   },
   "dependencies": {
-    "backbone": "^1.2.1",
     "colorbrewer": "0.0.2",
     "d3": "^3.5.6",
     "datamaps": "^0.4.0",
     "queue-async": "^1.0.7",
+    "rlite-router": "^1.1.0",
     "topojson": "^1.6.19",
     "underscore": "^1.8.3"
   }
