--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ dj-static==0.0.6
 Django==1.8.4
 django-adminplus==0.3
 django-extensions==1.5.5
+django-ordered-model==0.4.2
 gunicorn==19.3.0
 psycopg2==2.6.1
 six==1.9.0
